--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -1,4 +1,4 @@
-name: sample-stack-template
+name: sample-stack-templatedasfas
 description: Uncomment and modify the sections to configure your own amazing stack.
 branding:
   icon: bell # https://feathericons.com/
@@ -41,16 +41,16 @@ branding:
   #     - sample_topic_2
       
   # Branch Protection rules
-  # branches:
-  #   - name: release_v? #branch name or pattern you want to protect
-  #     parameters:
-  #       enforce-admins: true / false
-  #       required-pull-request-reviews:
-  #         dismiss-stale-reviews: true / false
-  #         require-code-owner-reviews: true / false
-  #         required-approving-review-count: 1 # integer
-  #       allow-force-pushes: true / false
-  #       allow-deletions: true / false
+  branches:
+    - name: release_v? #branch name or pattern you want to protect
+      parameters:
+        enforce-admins: true
+        required-pull-request-reviews:
+          dismiss-stale-reviews: true
+          require-code-owner-reviews: true
+          required-approving-review-count: 1 # integer
+        allow-force-pushes: true
+        allow-deletions: true
 
   # Configure an environment
   # environments: 
