--- a/.github/stacks/stack.yml
+++ b/.github/stacks/stack.yml
@@ -5,31 +5,7 @@ branding:
   color: blue # hex accepted
 
 #-------------------------------------------------------------
-# All values needed to be provided/verified by the user should be defined as inputs.
-# Values can be provided using a values file (yaml/json/.env format) or from the UX.
-# Default values are defined by stack authors using **default: <Value>**
-# All inputs defined here are optional unless they are marked **required: true**
-# All inputs will be of String type by default unless specified as **type:boolean**
-# All inputs will be considered as non-secrets unless specified as **is_secret:true**
-# All inputs will be available for scripts/workflows run as part of stack init
-# Any input that is not explicitly configured as Repo/Environment secret will NOT be available in the new stack
-# inputs:
-  # - name: sample_integer_input
-  #   type: integer # other accepted - string/boolean
-  #   default: 2
-  #   description: This shows up in the form during consumption.
-  #   validvalues: 
-  #   - 2
-  #   - 3
-  #   - 4
-  #   - 5
-  #   - 6
-
-  # - name: secret
-  #   is-secret: true / false
-
-#-------------------------------------------------------------
-# configs:
+configs:
   # Meta data for creating the new repository
   # repo-metadata:
   #   parameters:
